--- a/QDTSCZ_ADT_2023241.Test/QDTSCZ_ADT_2023241.Test.csproj
+++ b/QDTSCZ_ADT_2023241.Test/QDTSCZ_ADT_2023241.Test.csproj
@@ -1,9 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Logic\QDTSCZ_ADT_2023241.Logic.csproj" />
+    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Models\QDTSCZ_ADT_2023241.Models.csproj" />
+    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Repository\QDTSCZ_ADT_2023241.Repository.csproj" />
+  </ItemGroup>
 
 </Project>
