--- a/QDTSCZ_ADT_2023241.Repository/QDTSCZ_ADT_2023241.Repository.csproj
+++ b/QDTSCZ_ADT_2023241.Repository/QDTSCZ_ADT_2023241.Repository.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QDTSCZ_ADT_2023241.Models\QDTSCZ_ADT_2023241.Models.csproj" />
   </ItemGroup>
 
