--- a/QDTSCZ_ADT_2023241.Endpoint/QDTSCZ_ADT_2023241.Endpoint.csproj
+++ b/QDTSCZ_ADT_2023241.Endpoint/QDTSCZ_ADT_2023241.Endpoint.csproj
@@ -49,5 +49,11 @@
       <Name>QDTSCZ_ADT_2023241.Repository</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Castle.Core, Version=5.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.5.1.1\lib\net462\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
