--- a/QDTSCZ_ADT_2023241.Endpoint/QDTSCZ_ADT_2023241.Endpoint.csproj
+++ b/QDTSCZ_ADT_2023241.Endpoint/QDTSCZ_ADT_2023241.Endpoint.csproj
@@ -1,16 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Logic\QDTSCZ_ADT_2023241.Logic.csproj" />
-    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Models\QDTSCZ_ADT_2023241.Models.csproj" />
-    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Repository\QDTSCZ_ADT_2023241.Repository.csproj" />
-  </ItemGroup>
 
 </Project>
