--- a/QDTSCZ_ADT_2023241.Client/QDTSCZ_ADT_2023241.Client.csproj
+++ b/QDTSCZ_ADT_2023241.Client/QDTSCZ_ADT_2023241.Client.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QDTSCZ_ADT_2023241.Models\QDTSCZ_ADT_2023241.Models.csproj" />
   </ItemGroup>
 
