--- a/QDTSCZ_ADT_2023241.Endpoint/QDTSCZ_ADT_2023241.Endpoint.csproj
+++ b/QDTSCZ_ADT_2023241.Endpoint/QDTSCZ_ADT_2023241.Endpoint.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QDTSCZ_ADT_2023241\QDTSCZ_ADT_2023241.Logic\QDTSCZ_ADT_2023241.Logic.csproj" />
-    <ProjectReference Include="..\QDTSCZ_ADT_2023241\QDTSCZ_ADT_2023241.Models\QDTSCZ_ADT_2023241.Models.csproj" />
-    <ProjectReference Include="..\QDTSCZ_ADT_2023241\QDTSCZ_ADT_2023241.Repository\QDTSCZ_ADT_2023241.Repository.csproj" />
+    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Logic\QDTSCZ_ADT_2023241.Logic.csproj" />
+    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Models\QDTSCZ_ADT_2023241.Models.csproj" />
+    <ProjectReference Include="..\QDTSCZ_ADT_2023241.Repository\QDTSCZ_ADT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
