--- a/QDTSCZ_ADT_2023241.Endpoint/Properties/launchSettings.json
+++ b/QDTSCZ_ADT_2023241.Endpoint/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5030",
+      "applicationUrl": "http://0.0.0.0:5030",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
